Fixed Navbar Alignment

--- a/style.css
+++ b/style.css
@@ -28,16 +28,20 @@ body {
 nav {
     z-index: 1000;
     width: 100%;
-    padding: 1.5rem 10%;
+    padding: 1.5rem 2rem;
     background-color: var(--navbar-bg);
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+    position: sticky;
+    top: 0;
+    font-size: 120%;
+}
+
+nav > div {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
-    position: sticky;
-    top: 0;
-    font-size: 120%;
+    margin: 0 10%;
 }
 
 .search {
